package com.nagendar.learning.option;/*
 * @author: pagidimarri.nagendar
 * @createdAt: 02/10/23 11:06 am
 */

public interface OptionExecutor {
	void executeOption(String filepath);
}
